--- a/GatewayAPI/pom.xml
+++ b/GatewayAPI/pom.xml
@@ -68,6 +68,13 @@
 		    <artifactId>spring-boot-starter-test</artifactId>
 		    <scope>test</scope>
 		</dependency>
+		
+		<dependency>
+		    <groupId>com.mysql</groupId>
+		    <artifactId>mysql-connector-j</artifactId>
+		    <scope>runtime</scope>
+		</dependency>
+
 
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
