--- a/auth-service/pom.xml
+++ b/auth-service/pom.xml
@@ -78,6 +78,13 @@
 		    <version>0.11.5</version>
 		    <scope>runtime</scope>
 		</dependency>
+		
+		<dependency>
+		    <groupId>com.mysql</groupId>
+		    <artifactId>mysql-connector-j</artifactId>
+		    <scope>runtime</scope>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
