chore: add gateway route for matching-booking-service
- Registered matching-booking-service route
- Verified routing via API Gateway

--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -28,6 +28,13 @@ spring:
           predicates:
             - Path=/admin/**
 
+        - id: matching-booking
+          uri: http://localhost:8085
+          predicates:
+            - Path=/matching-booking/**
+          filters:
+            - StripPrefix=1
+
 jwt:
   secret: carecircle-auth-secret-key-which-is-at-least-32-bytes-long
 
