--- a/.gitignore
+++ b/.gitignore
@@ -11,9 +11,17 @@ Thumbs.db
 # Environment files
 **/.env
 **/.env.*
+**/.env.local
+**/.env.development.local
+**/.env.test.local
+**/.env.production.local
 
 
 # ===== IDEs =============================
+
+# VS Code
+.vscode/
+**/.vscode/
 
 # IntelliJ IDEA
 **/.idea/
@@ -23,8 +31,17 @@ Thumbs.db
 **/.classpath
 **/.project
 **/.settings/
-**/src/main/resources/
 **/bin/
+
+# ===== Node / Frontend ==================
+**/node_modules/
+**/dist/
+**/build/
+.npm
+**/.eslintcache
+**/.stylelintcache
+**/.vite-inspect
+**/*.local
 
 # ===== Metadata =========================
 
