chore: update .gitignore to exclude src/main/resources

--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,7 @@ Thumbs.db
 **/.project
 **/.settings/
 **/bin/
-
+**/src/main/resources/*
 # ===== Node / Frontend ==================
 **/node_modules/
 **/dist/
