--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -15,24 +15,25 @@ spring:
         - id: auth-service
           uri: http://localhost:8081
           predicates:
-            - Path=/auth-service/**
-          filters:
-            - StripPrefix=1
+            - Path=/auth/**
+          # No StripPrefix needed for /auth/** as controller expects /auth/...
 
         # =========================
-        # USER PROFILE SERVICE
+        # MATCHING SERVICE
         # =========================
-        - id: user-profile-service
-          uri: http://localhost:8083
+        - id: matching-service-cities
+          uri: http://localhost:8085
           predicates:
-            - Path=/user-profile-service/**
-          filters:
-            - StripPrefix=1
+            - Path=/cities/**
+          # Controller expects /cities...
 
-        # =========================
-        # MATCHING / BOOKING
-        # =========================
-        - id: matching-booking-service
+        - id: matching-service-admin
+          uri: http://localhost:8085
+          predicates:
+            - Path=/admin/cities/**, /admin/matching/**
+          # Controller expects /admin/cities, /admin/matching...
+
+        - id: matching-service-legacy
           uri: http://localhost:8085
           predicates:
             - Path=/matching-booking-service/**
@@ -40,7 +41,41 @@ spring:
             - StripPrefix=1
 
         # =========================
-        # COMMUNICATION SERVICE (REST)
+        # USER PROFILE SERVICE
+        # =========================
+        - id: user-profile-parents
+          uri: http://localhost:8083
+          predicates:
+            - Path=/parents/**
+          # Controller expects /parents...
+
+        - id: user-profile-caregiver
+          uri: http://localhost:8083
+          predicates:
+            - Path=/caregiver/**
+          # Controller expects /caregiver...
+          
+        - id: user-profile-children
+          uri: http://localhost:8083
+          predicates:
+             - Path=/children/**
+
+        - id: user-profile-admin
+          uri: http://localhost:8083
+          predicates:
+            - Path=/admin/**
+          # Catch-all for other admin routes (User Profile service)
+          # Note: Specific admin routes (cities, matching) must be defined ABOVe this to take precedence
+
+        - id: user-profile-service-legacy
+          uri: http://localhost:8083
+          predicates:
+            - Path=/user-profile-service/**
+          filters:
+            - StripPrefix=1
+
+        # =========================
+        # COMMUNICATION SERVICE
         # =========================
         - id: communication-service
           uri: http://localhost:8082
@@ -49,10 +84,6 @@ spring:
           filters:
             - StripPrefix=1
 
-
-        # =========================
-        # COMMUNICATION SERVICE (WEBSOCKET)
-        # =========================
         - id: communication-ws
           uri: ws://localhost:8082
           predicates:
